--- a/gk/gk.vcxproj
+++ b/gk/gk.vcxproj
@@ -141,9 +141,8 @@
   <ItemGroup>
     <None Include="res\shaders\basic.fs" />
     <None Include="res\shaders\basic.vs" />
-    <None Include="res\shaders\skybox.fs" />
-    <None Include="res\shaders\skybox.vs" />
-    <None Include="res\shaders\vertex.vs" />
+    <None Include="res\shaders\king.fs" />
+    <None Include="res\shaders\king.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="legacy\IndexBuffer.cpp" />
@@ -151,20 +150,22 @@
     <ClCompile Include="legacy\Renderer.cpp" />
     <ClCompile Include="legacy\VertexArray.cpp" />
     <ClCompile Include="legacy\VertexBuffer.cpp" />
+    <ClCompile Include="src\scene.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="res\shaders\fragment.fs" />
     <ClInclude Include="legacy\IndexBuffer.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\mesh.h" />
     <ClInclude Include="src\model.h" />
     <ClInclude Include="legacy\Renderer.h" />
     <ClInclude Include="legacy\Shader.h" />
+    <ClInclude Include="src\scene.h" />
     <ClInclude Include="src\shader_m.h" />
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
     <ClInclude Include="legacy\VertexArray.h" />
     <ClInclude Include="legacy\VertexBuffer.h" />
     <ClInclude Include="legacy\VertexBufferLayout.h" />
+    <ClInclude Include="src\weather.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
