Add common shader files intrastructure
Now it is possible to add glsl files with functions that will be common for every shader.

--- a/gk/gk.vcxproj
+++ b/gk/gk.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <None Include="res\shaders\basic.fs" />
     <None Include="res\shaders\basic.vs" />
+    <None Include="res\shaders\common.glsl" />
     <None Include="res\shaders\king.fs" />
     <None Include="res\shaders\king.vs" />
   </ItemGroup>
